--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon ./src/app/index.js"
+    "dev": "nodemon ./src/app/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.2",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "mongodb": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
